* 2013-10-07 - thorben.betten@open-xchange.com

 - Fix for bug 29147: Detect possibly harmful HTML content in image files and force attachment download then
 - Fix for bug 29161: Added missing 'javax.management' imports to MANIFEST.MF files

* 2013-10-05 - thorben.betten@open-xchange.com

 - Fix for bug 29039: Handle DataTruncation exception and throw appropriate error

* 2013-10-04 - thorben.betten@open-xchange.com

 - Fix for bug 29110: Apply proper defaults to user mail option bits when creating a user
 - Fix for bug 27048: Fixed 'StringIndexOutOfBoundsException' in capability service

* 2013-10-03 - thorben.betten@open-xchange.com

 - Fix for bug 29120: Introduced whiteboard pattern for config-tree to slob mappings

* 2013-10-02 - thorben.betten@open-xchange.com

 - Fix for bug 29072: Don't transform animated .gif images
 - Fix for bug 29101: Added export of 'javax.activation' package to system fragment bundle

* 2013-10-01 - thorben.betten@open-xchange.com

 - Change for bug 29081: Adapted category of error code 'UWA_WIDGET-0004' to USER_INPUT to display meaningful error message to the user
 - Fix for bug 28274: Support optional parameter "failOnError" to let client decide whether an error is supposed to be thrown in case of a
                      delete failure or not
 - Fix for bug 29092: Deal with possible 'FLD-0003' error when collecting file storage root folders

* 2013-09-30 - thorben.betten@open-xchange.com

 - Fix for bug 29071: Extended preview cache to also keep scaled images to have computation once, but not on every new client request
 - Fix for bug 29032: Added client-specific hash to public session cookie

* 2013-09-28 - thorben.betten@open-xchange.com

 - Fix for bug 29002: Keep proper emoji characters on reply/forward operation
 - Fix for bug 28942: Prepare UTC-only properties to not specify a time zone

* 2013-09-25 - thorben.betten@open-xchange.com

 - Fix for bug 29044 : Several null guards to deal with absent messages
