@@ -53,7 +53,7 @@ import com.openexchange.i18n.LocalizableStrings;
 
 /**
  * {@link ContactExceptionMessages}
- * 
+ *
  * @author <a href="mailto:marcus.klein@open-xchange.com">Marcus Klein</a>
  */
 public class ContactExceptionMessages implements LocalizableStrings {
@@ -125,6 +125,8 @@ public class ContactExceptionMessages implements LocalizableStrings {
     public static final String NO_CHANGE_PERMISSION_MSG = "You are not allowed to modify contact %1$d in context %2$d.";
 
     public static final String EMAIL_MANDATORY_FOR_EXTERNAL_MEMBERS_MSG = "An E-Mail address is mandatory for external distribution list members. Please add a valid E-Mail address.";
+
+    public static final String OBJECT_ID_MANDATORY_FOR_REFERENCED_MEMBERS_MSG = "The object identifier is mandatory for distribution list members referencing existing contacts.";
 
     public static final String LOAD_OBJECT_FAILED_MSG = "Unable to load objects. Context %1$d user %2$d";
 
